# grant-harness

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.claude/commands/: a02-app-extract.md  a03-app-replicate.md  analyze-form.md  attach-documents.md  c04-company-docs.md  c05-company-validate.md  export-application.md  g01-grant-lists.md  g04-grant-sync.md  g05-grant-validate.md  ingest-company.md  ingest-grants.md  issue-close.md  issue-five.md  issue-status.md  issue.md  m01-match-grants.md  m02-match-explain.md  m04-match-eligibility.md  match-company.md  match-grants.md  p04-populate-docs.md  p05-populate-export.md  populate-application.md  replicate-form.md  request-signoff.md  review-application.md  reviewpr.md  s02-signoff-track.md  s03-signoff-changes.md  s05-submit-portal.md  scrape-grants.md  setup-gemini.md  setup-repo.md  test-prototype.md  upload-to-gemini.md
.claude/commands/_archive/: a01-app-identify.md  a04-app-map.md  a05-app-validate.md  c01-company-scrape.md  c02-company-profile.md  c03-company-vector.md  g02-grant-docs.md  g03-gemini-upload.md  m03-match-rank.md  m05-match-export.md  p01-populate-ai.md  p02-populate-review.md  p03-populate-comment.md  s01-signoff-request.md  (+2 more)
.claude/scratchpads/: issue-01-final-implementation.md  issue-01-gordon-review.md  issue-01-playwright-skill-grant-ingestion.md  issue-01-week1-grant-company-ingestion.md  issue-02-current-status-summary.md  issue-02-delivery-summary.md  issue-02-dual-format-concept.md  issue-02-e2e-testing-plan.md  issue-02-final-testing-and-completion.md  issue-02-progress-summary.md  issue-02-test-execution-evidence.md  issue-02-user-journey-and-ux-architecture.md  issue-02-validation-fix.md  issue-02-week2-application-form-replication.md  issue-10-week3-known-issues.md  issue-12-critical-hydration-bug.md  issue-12-localstorage-validation.md
.cursor/rules/: ADR.mdc  README.md  folder-structure.mdc  rules.mdc
.docs/prospects/: consultants.md
.docs/research/: Australian Government Grant Sources.md
.docs/specs/: Grant-Harness_Repository-Initiation-Plan.md  Prototype-plan.md  github-issues-update-plan.md  issue-7-multi-tenancy-security.md  mvp-conceptual-plan.md  mvp-phase2.md  phase-0-documentation-summary.md  tasks.md
back/grant-prototype/: .env.example  GRANT_METADATA_STRATEGY.md  fix_emojis.py  parse_grant_sources.py  pyproject.toml  test_matching.py  upload_emew.py  upload_igp.py
back/grant-prototype/.outputs/: EMEW-Grant-Review-Summary-2025-11-12.md  RAG-Improvements-Summary-2025-11-12.md  RAG-Performance-Analysis-2025-11-12.md
back/grant-prototype/gemini_store/: __init__.py  company_corpus.py  corpus_manager.py  file_manager.py  grant_corpus.py  query_engine.py
back/grant-prototype/scripts/: diagnose_corpus.py  query_emew_matches.py  query_rag.py  test_grant_corpus.py  upload_emew_corpus.py  upload_emew_profile.py  upload_grants_batch.py
back/grant-prototype/utils/: ABN_LOOKUP_SETUP.md  abn_lookup.py  inspect_gemini_corpus.py
docs/specs/: Grant-Harness_Repository-Initiation-Plan.md
front/grant-portal/: README.md  package-lock.json  package.json  playwright.config.ts  stop
(+46 files in other folders)
