[project]
name = "grant-harness-prototype"
version = "0.1.0"
description = "AI-powered Australian government grant discovery and matching platform - Phase 1 Prototype"
authors = [{name = "Whisperlooms", email = "gordon@whisperlooms.com"}]
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.3.0",      # Gemini API
    "google-cloud-aiplatform>=1.38.0", # Vertex AI (if needed)
    "scrapy>=2.11.0",                  # Web scraping framework
    "beautifulsoup4>=4.12.0",          # HTML parsing
    "lxml>=4.9.0",                     # XML/HTML processing
    "requests>=2.31.0",                # HTTP client
    "pydantic>=2.5.0",                 # Data validation
    "python-dotenv>=1.0.0",            # Environment management
    "pandas>=2.1.0",                   # Data manipulation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=scrapers --cov=gemini_store --cov=matching --cov=models --cov-report=term-missing"
